TimeBased SQL injection scanner

--- a/Plugin/vulns.html
+++ b/Plugin/vulns.html
@@ -90,7 +90,7 @@
 
     <!-- Used only to display debug informations-->
     <a href='#stop' id='stop'>STOP</a>
-    <a href='./vulns.html' target=_blank id='export'>LIST</a>
+    <a href='./vulns.html' id='export'>LIST</a>
     <div id='debug'>
       <span id='status'>Status Server</span>
     </div>
