RCE scanner added - TODO: Bugfix

--- a/Plugin/popup.html
+++ b/Plugin/popup.html
@@ -56,6 +56,7 @@
         <li><span id='xss'>0 Cross Site Scripting</span></li>
         <li><span id='sql'>0 Injection SQL</span></li>
         <li><span id='lfi'>0 Local File Inclusion</span></li>
+        <li><span id='rce'>0 Remote Commands Execution</span></li>
       </ul>
      
       <span id='total'>Total : 0 vulnerability found</span>
