--- a/Plugin/vulns.html
+++ b/Plugin/vulns.html
@@ -84,6 +84,7 @@
         <li><span id='xss'>0 Cross Site Scripting</span></li>
         <li><span id='sql'>0 Injection SQL</span></li>
         <li><span id='lfi'>0 Local File Inclusion</span></li>
+        <li><span id='rce'>0 Remote Commands Execution</span></li>
       </ul>
     
     </div>
